--- a/src/components/Cockpit/Cockpit.module.css
+++ b/src/components/Cockpit/Cockpit.module.css
@@ -10,7 +10,7 @@
   font-weight: bold;
 }
 
-.Cockpit button {
+.Button {
   background-color: green;
   color: white;
   font: inherit;
@@ -19,16 +19,16 @@
   cursor: pointer;
 }
 
-.Cockpit button:hover {
+.Button:hover {
   background-color: lightgreen;
   color: black;
 }
 
-.Cockpit button.Red {
+.Button.Red {
   background-color: red;
 }
 
-.Cockpit button.Red:hover {
+.Button.Red:hover {
   background-color: salmon;
   color: black;
 }
